# service-ontology-lite

./: .gitignore  Dockerfile  LICENSE  README-ko_kr.md  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/playmcp-logo/: compose_playmcp_logo.py
docs/: mvp-scope.md  service-ontology.schema.json
reports/playmcp-logo/: service_ontology_lite_playmcp_logo_600_v1_report.json
sample-app/: package.json  service-ontology.json
sample-app/app/: page.tsx
sample-app/app/api/admin/: route.ts
sample-app/app/api/cron/: route.ts
sample-app/app/api/public/: route.ts
sample-app/app/dashboard/: page.tsx
src/service_ontology_lite/: __init__.py  audit.py  cli.py  mcp_http_server.py  mcp_server.py  models.py  scanner.py  schema.py
tests/: test_agent_os_cli_mcp.py  test_agent_os_registry.py  test_feature_hardening.py  test_sample_app.py  test_version.py
